--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -18,8 +18,8 @@
         work correctly both with client-side routing and a non-root public URL.
         Learn how to configure a non-root public URL by running `npm run build`.
         -->
-        <title>Emergent | Fullstack App</title>
-        <script src="https://assets.emergent.sh/scripts/emergent-main.js"></script>
+        <title>Webcrafters | Studio</title>
+        <script src="/scripts/main.js"></script>
         <!--
         These two scripts have been added for the Visual Edits, please do not edit or remove them
         -->
@@ -58,9 +58,9 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
         <a
-            id="emergent-badge"
+            id="webcrafters-studio-badge"
             target="_blank"
-            href="https://app.emergent.sh/?utm_source=emergent-badge"
+            href="https://studio.webcrafters.be/?utm_source=webcrafters-studio-badge"
             style="
                 display: flex !important;
                 align-items: center !important;
@@ -70,8 +70,8 @@
                 text-decoration: none;
                 padding: 6px 10px;
                 font-family: -apple-system, BlinkMacSystemFont,
-                    &quot;Segoe UI&quot;, Roboto, Oxygen, Ubuntu, Cantarell,
-                    &quot;Open Sans&quot;, &quot;Helvetica Neue&quot;,
+                    Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell,
+                    Open Sans, Helvetica Neue,
                     sans-serif !important;
                 font-size: 12px !important;
                 z-index: 9999 !important;
@@ -84,92 +84,20 @@
             <div
                 style="display: flex; flex-direction: row; align-items: center"
             >
-                <img
-                    style="width: 20px; height: 20px; margin-right: 8px"
-                    src="https://avatars.githubusercontent.com/in/1201222?s=120&u=2686cf91179bbafbc7a71bfbc43004cf9ae1acea&v=4"
-                />
+                <svg style="width: 20px; height: 20px; margin-right: 8px" width="40" height="40" viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg" aria-label="Webcrafters Studio AI" x-file-name="WebcraftersLogo" x-line-number="2" x-component="svg" x-id="WebcraftersLogo_2" x-dynamic="false"><rect x="6" y="6" width="52" height="52" rx="12" fill="url(#bg)" x-file-name="WebcraftersLogo" x-line-number="11" x-component="rect" x-id="WebcraftersLogo_11" x-dynamic="false"></rect><rect x="18" y="18" width="28" height="6" rx="3" fill="white" x-file-name="WebcraftersLogo" x-line-number="21" x-component="rect" x-id="WebcraftersLogo_21" x-dynamic="false"></rect><rect x="18" y="29" width="20" height="6" rx="3" fill="white" opacity="0.9" x-file-name="WebcraftersLogo" x-line-number="22" x-component="rect" x-id="WebcraftersLogo_22" x-dynamic="false"></rect><rect x="18" y="40" width="14" height="6" rx="3" fill="white" opacity="0.75" x-file-name="WebcraftersLogo" x-line-number="23" x-component="rect" x-id="WebcraftersLogo_23" x-dynamic="false"></rect><defs x-file-name="WebcraftersLogo" x-line-number="25" x-component="defs" x-id="WebcraftersLogo_25" x-dynamic="false"><linearGradient id="bg" x1="0" y1="0" x2="1" y2="1" x-file-name="WebcraftersLogo" x-line-number="26" x-component="linearGradient" x-id="WebcraftersLogo_26" x-dynamic="false"><stop offset="0%" stop-color="#22d3ee" x-file-name="WebcraftersLogo" x-line-number="27" x-component="stop" x-id="WebcraftersLogo_27" x-dynamic="false"></stop><stop offset="100%" stop-color="#8b5cf6" x-file-name="WebcraftersLogo" x-line-number="28" x-component="stop" x-id="WebcraftersLogo_28" x-dynamic="false"></stop></linearGradient></defs></svg>
                 <p
                     style="
                         color: #000000;
-                        font-family: -apple-system, BlinkMacSystemFont,
-                            &quot;Segoe UI&quot;, Roboto, Oxygen, Ubuntu,
-                            Cantarell, &quot;Open Sans&quot;,
-                            &quot;Helvetica Neue&quot;, sans-serif !important;
+                        font-family: -apple-system, BlinkMacSystemFont,Segoe UI, Roboto, Oxygen, Ubuntu,
+                            Cantarell, Open Sans, Helvetica Neue, sans-serif !important;
                         font-size: 12px !important;
                         align-items: center;
                         margin-bottom: 0;
                     "
                 >
-                    Made with Emergent
+                    Made with Webcrafters Studio
                 </p>
             </div>
         </a>
-        <script>
-            !(function (t, e) {
-                var o, n, p, r;
-                e.__SV ||
-                    ((window.posthog = e),
-                    (e._i = []),
-                    (e.init = function (i, s, a) {
-                        function g(t, e) {
-                            var o = e.split(".");
-                            2 == o.length && ((t = t[o[0]]), (e = o[1])),
-                                (t[e] = function () {
-                                    t.push(
-                                        [e].concat(
-                                            Array.prototype.slice.call(
-                                                arguments,
-                                                0,
-                                            ),
-                                        ),
-                                    );
-                                });
-                        }
-                        ((p = t.createElement("script")).type =
-                            "text/javascript"),
-                            (p.crossOrigin = "anonymous"),
-                            (p.async = !0),
-                            (p.src =
-                                s.api_host.replace(
-                                    ".i.posthog.com",
-                                    "-assets.i.posthog.com",
-                                ) + "/static/array.js"),
-                            (r =
-                                t.getElementsByTagName(
-                                    "script",
-                                )[0]).parentNode.insertBefore(p, r);
-                        var u = e;
-                        for (
-                            void 0 !== a ? (u = e[a] = []) : (a = "posthog"),
-                                u.people = u.people || [],
-                                u.toString = function (t) {
-                                    var e = "posthog";
-                                    return (
-                                        "posthog" !== a && (e += "." + a),
-                                        t || (e += " (stub)"),
-                                        e
-                                    );
-                                },
-                                u.people.toString = function () {
-                                    return u.toString(1) + ".people (stub)";
-                                },
-                                o =
-                                    "init me ws ys ps bs capture je Di ks register register_once register_for_session unregister unregister_for_session Ps getFeatureFlag getFeatureFlagPayload isFeatureEnabled reloadFeatureFlags updateEarlyAccessFeatureEnrollment getEarlyAccessFeatures on onFeatureFlags onSurveysLoaded onSessionId getSurveys getActiveMatchingSurveys renderSurvey canRenderSurvey canRenderSurveyAsync identify setPersonProperties group resetGroups setPersonPropertiesForFlags resetPersonPropertiesForFlags setGroupPropertiesForFlags resetGroupPropertiesForFlags reset get_distinct_id getGroups get_session_id get_session_replay_url alias set_config startSessionRecording stopSessionRecording sessionRecordingStarted captureException loadToolbar get_property getSessionProperty Es $s createPersonProfile Is opt_in_capturing opt_out_capturing has_opted_in_capturing has_opted_out_capturing clear_opt_in_out_capturing Ss debug xs getPageViewId captureTraceFeedback captureTraceMetric".split(
-                                        " ",
-                                    ),
-                                n = 0;
-                            n < o.length;
-                            n++
-                        )
-                            g(u, o[n]);
-                        e._i.push([i, s, a]);
-                    }),
-                    (e.__SV = 1));
-            })(document, window.posthog || []);
-            posthog.init("phc_yJW1VjHGGwmCbbrtczfqqNxgBDbhlhOWcdzcIJEOTFE", {
-                api_host: "https://us.i.posthog.com",
-                person_profiles: "identified_only", // or 'always' to create profiles for anonymous users as well
-            });
-        </script>
     </body>
 </html>
