Added content-aware assistant

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
-        <meta name="description" content="A product of emergent.sh" />
+        <meta name="description" content="A product of Webcrafters.be" />
         <!--
         manifest.json provides metadata used when your web app is installed on a
         user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -28,7 +28,7 @@
             if (window.self !== window.top) {
                 // Load debug monitor script
                 var debugMonitorScript = document.createElement('script');
-                debugMonitorScript.src = 'https://assets.emergent.sh/scripts/debug-monitor.js';
+                debugMonitorScript.src = '/scripts/debug-monitor.js';
                 document.head.appendChild(debugMonitorScript);
 
                 // Configure Tailwind
@@ -57,47 +57,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-        <a
-            id="webcrafters-studio-badge"
-            target="_blank"
-            href="https://studio.webcrafters.be/?utm_source=webcrafters-studio-badge"
-            style="
-                display: flex !important;
-                align-items: center !important;
-                position: fixed !important;
-                bottom: 20px;
-                right: 20px;
-                text-decoration: none;
-                padding: 6px 10px;
-                font-family: -apple-system, BlinkMacSystemFont,
-                    Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell,
-                    Open Sans, Helvetica Neue,
-                    sans-serif !important;
-                font-size: 12px !important;
-                z-index: 9999 !important;
-                box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15) !important;
-                border-radius: 8px !important;
-                background-color: #ffffff !important;
-                border: 1px solid rgba(255, 255, 255, 0.25) !important;
-            "
-        >
-            <div
-                style="display: flex; flex-direction: row; align-items: center"
-            >
-                <svg style="width: 20px; height: 20px; margin-right: 8px" width="40" height="40" viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg" aria-label="Webcrafters Studio AI" x-file-name="WebcraftersLogo" x-line-number="2" x-component="svg" x-id="WebcraftersLogo_2" x-dynamic="false"><rect x="6" y="6" width="52" height="52" rx="12" fill="url(#bg)" x-file-name="WebcraftersLogo" x-line-number="11" x-component="rect" x-id="WebcraftersLogo_11" x-dynamic="false"></rect><rect x="18" y="18" width="28" height="6" rx="3" fill="white" x-file-name="WebcraftersLogo" x-line-number="21" x-component="rect" x-id="WebcraftersLogo_21" x-dynamic="false"></rect><rect x="18" y="29" width="20" height="6" rx="3" fill="white" opacity="0.9" x-file-name="WebcraftersLogo" x-line-number="22" x-component="rect" x-id="WebcraftersLogo_22" x-dynamic="false"></rect><rect x="18" y="40" width="14" height="6" rx="3" fill="white" opacity="0.75" x-file-name="WebcraftersLogo" x-line-number="23" x-component="rect" x-id="WebcraftersLogo_23" x-dynamic="false"></rect><defs x-file-name="WebcraftersLogo" x-line-number="25" x-component="defs" x-id="WebcraftersLogo_25" x-dynamic="false"><linearGradient id="bg" x1="0" y1="0" x2="1" y2="1" x-file-name="WebcraftersLogo" x-line-number="26" x-component="linearGradient" x-id="WebcraftersLogo_26" x-dynamic="false"><stop offset="0%" stop-color="#22d3ee" x-file-name="WebcraftersLogo" x-line-number="27" x-component="stop" x-id="WebcraftersLogo_27" x-dynamic="false"></stop><stop offset="100%" stop-color="#8b5cf6" x-file-name="WebcraftersLogo" x-line-number="28" x-component="stop" x-id="WebcraftersLogo_28" x-dynamic="false"></stop></linearGradient></defs></svg>
-                <p
-                    style="
-                        color: #000000;
-                        font-family: -apple-system, BlinkMacSystemFont,Segoe UI, Roboto, Oxygen, Ubuntu,
-                            Cantarell, Open Sans, Helvetica Neue, sans-serif !important;
-                        font-size: 12px !important;
-                        align-items: center;
-                        margin-bottom: 0;
-                    "
-                >
-                    Made with Webcrafters Studio
-                </p>
-            </div>
-        </a>
+
     </body>
 </html>
